--- a/public/index.css
+++ b/public/index.css
@@ -244,66 +244,19 @@ a:after {
 
 .output-inner {
   white-space: pre-wrap;
-  width: 400%;
-  height: 400%;
-  margin-left: -150%; /* exactly -(width  - 100%) / 2 */
-  margin-top: -84%;   /* couldn't find an exact formula; trial and error */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 200%;
+  height: 200%;
+  margin: 16% 50%;
+  transform: translate(-50%, -50%);
+  display: grid;
+  place-items: center;
   font-size: var(--ASCII-font-size);
+  background: hsl(0, 0%, 13%);
 }
 
-.output::after {
-  content: "+";
-  position: absolute;
-  left: -6px;
-  top: -13px;
-  font-weight: bold;
-  font-size: 18px;
-  color: var(--primary-color);
-  background-color: var(--background-color);
-  padding: 3px 6px;
-  z-index: 1;
-}
-
-.output::before {
-  content: "+";
-  position: absolute;
-  right: -6px;
-  top: -13px;
-  font-weight: bold;
-  font-size: 18px;
-  color: var(--primary-color);
-  background-color: var(--background-color);
-  padding: 3px 6px;
-  z-index: 1;
-}
-
-.output .output-inner::after {
-  content: "+";
-  position: absolute;
-  left: -6px;
-  bottom: -11px;
-  font-weight: bold;
-  font-size: 18px;
-  color: var(--primary-color);
-  background-color: var(--background-color);
-  padding: 3px 6px;
-  z-index: 1;
-}
-
-.output .output-inner::before {
-  content: "+";
-  position: absolute;
-  right: -6px;
-  bottom: -11px;
-  font-weight: bold;
-  font-size: 18px;
-  color: var(--primary-color);
-  background-color: var(--background-color);
-  padding: 3px 6px;
-  z-index: 1;
+.output-inner text {
+  display: grid;
+  place-items: center;
 }
 
 .output button {
